Add checkPermission and updateSession methods to BaseController and Update restaurant controller
